# iroha

./: .gitignore  README.md
brain/: .env.example  README.md  pyproject.toml
brain/docs/: RUNBOOK.md
brain/src/iroha_brain/: main.py
brain/src/iroha_brain/api/: routes.py
brain/src/iroha_brain/core/: config.py  logging.py
brain/src/iroha_brain/models/: schemas.py
brain/src/iroha_brain/services/: ollama_client.py
orchestrator/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
orchestrator/src/: config.ts  decider.ts  demo.ts  schema.ts  smoke.ts
orchestrator/src/tests/: brain-contract.test.ts  config.test.ts  decider.test.ts
shared/schema/: brain.py  brain.ts  brain_response.schema.json  fixtures.ts  index.ts  package-lock.json  package.json
